--- a/builds/sassEssentials/index.html
+++ b/builds/sassEssentials/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <header>
-  <div class="container">
-    <nav>
+  <nav>
+    <div class="container">
       <div class="branding"><h1>Table of Contents</h1></div>
       <ul>
         <li><a href="#jumbotron">Jumbotron</a></li>
@@ -18,10 +18,9 @@
         <li><a href="#lists">Lists</a></li>
         <li><a href="#media">Media</a></li>
         <li><a href="#tables">Tables</a></li>
-        <li><a href="#forms">Forms</a></li>
       </ul>
-    </nav>
-  </div>
+    </div>
+  </nav>
 </header>
 
 <section class="background jumbotron" id="jumbotron">
@@ -47,19 +46,21 @@
 
     <h4>H4. Fourth level headline</h4>
     <p>Nesciunt odio velit quae sapiente saepe officia fugit delectus asperiores, eius temporibus expedita voluptate, placeat totam! Reprehenderit esse deserunt laboriosam, nihil architecto recusandae quas nam quo placeat, perspiciatis natus. Explicabo.</p>
+
     <div class="grid">
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
-        <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
+      <div class="item"><img src="http://placehold.it/500x500" alt="thumbnail"></div>
     </div>
     <ol class="media">
         <li class="item">
@@ -91,8 +92,8 @@
   <div class="container">
     <h1>Buttons</h1>
     <button class="btn-default">Default</button>
-    <button class="btn-hot">Cool</button>
-    <button class="btn-cool">Hot</button>
+    <button class="btn-cool">Cool</button>
+    <button class="btn-hot">Hot</button>
   </div><!-- container -->
 </section>
 
@@ -176,7 +177,7 @@
           <p>Ea obcaecati a deleniti autem. Nihil minima, laudantium voluptas quod inventore iure, beatae quis aspernatur culpa qui minus esse harum odit soluta! Quaerat magnam asperiores repellendus voluptas similique est excepturi.</p>
         </a>
       </li>
-    </ol>
+    </ol>      
   </div>
 </section>
 
@@ -228,44 +229,10 @@
   </div>
 </section>
 
-<section id="forms">
-  <div class="container">
-    <h1>Forms</h1>
-    <form>
-      <div class="form-group">
-        <label for="inputName">Name</label>
-        <input class="form-control" type="text" id="inputName" 
-          placeholder="Name">
-      </div>
-    <div class="form-group">
-      <label for="inputEmail">Email</label>
-      <input class="form-control" type="email" id="inputEmail" 
-        placeholder="Email">
-    </div>
-    <div class="form-group">
-      <label for="selectSite">Site</label>
-      <select class="form-control" id="selectSite">
-        <option>Choose...</option>
-        <option>lynda.com</option>
-        <option>raybo.org</option>
-        <option>iviewsource.com</option>
-      </select>  
-    </div>
-    <div class="checkbox">
-      <label><input id="inputAddList" type="checkbox">Add me to e-mail blast</label>
-    </div>
-    <div class="form-group">
-      <label for="inputComments">Comments</label>
-      <textarea class="form-control" id="inputComments"></textarea> 
-    </div>
-    <input class="btn btn-default pull-right" type="submit" value="submit">
-    </form>
-  </div>
-</section>
         
 <footer>
-  <div class="container">
     <nav>
+      <div class="container">
       <ul>
         <li><a href="#jumbotron">Jumbotron</a></li>
         <li><a href="#palette">Palette</a></li>
@@ -274,10 +241,9 @@
         <li><a href="#lists">Lists</a></li>
         <li><a href="#media">Media</a></li>
         <li><a href="#tables">Tables</a></li>
-        <li><a href="#forms">Forms</a></li>
       </ul>
+    </div>
     </nav>
-  </div>
 </footer>     
 
   <script src="js/script.js"></script>
